Tue Apr 13 23:50:28 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htcommon/defaults.cc: Add new config option use_doc_date to use
	document meta information for the DocTime() field.

	* htdig/HTML.cc(do_tag): Call Retriever::got_time if use_doc_date
	is set and we run across a META date tag.

	* htdig/Retriever.h, htdig/Retriver.cc: Add new got_date
	function. When called, sets the DocTime field of the DocumentRef
	after parsing is completed. Currently assumes ISO 8601 format for
	the date tag.

Sun Apr 11 12:51:39 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htsearch/Display.cc (buildMatchList): Delete thisRef if excluded
	by URL.  Call setRef(NULL), not setRef(thisRef).

Wed Apr  7 19:35:42 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc(usage): Remove bogus -w flag.

Thu Apr  1 12:05:11 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/htsearch.cc(main): Apply Gabriele's patch to avoid using an
	invalid matchesperpage CGI input variable.

	* htsearch/Display.cc(display) & (setVariables): Correct any invalid
	values for matches_per_page attribute to avoid div. by 0 error.

Wed Mar 31 15:19:25 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htfuzzy/Synonym.cc: Fix previous fix of minor memory leak.
	(db pointer wasn't properly set)

Mon Mar 29 10:31:09 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(excerpt): Added patch from Gabriele to
	improve display of excerpts--show top of description always,
	otherwise try to find the excerpt.

Sun Mar 28 19:45:02 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/HtWordType.h (HtIsWordChar): Avoid matching 0 when using
	strchr.
	(HtIsStrictWordChar): Ditto.

	* htdig/ExternalParser.cc (parse): Before got_href call, set
	hopcount of URL to that of base plus 1.
	Add URL to external parser error output.

	* htlib/URL.cc (URL(char *ref, URL &parent) ): Move call to
	constructURL call inside previous else-clause.